--- a/style.css
+++ b/style.css
@@ -6,14 +6,14 @@ Author: Marlon Böhland
 Author URI: http://www.boehland.one
 */
 
-
-/**
-* Eigene Definitionen
- */
 body {
     /*margin-top:150px;*/
     padding: 0;
     background: #fff;
+}
+
+#main-content {
+    min-height: 550px;
 }
 
 .separator-border {
@@ -21,3 +21,52 @@ body {
     border-color: rgb(23, 27, 44);
 }
 
+#navbar-top {
+    display: block;
+    background: #fff;
+    opacity: 0.9;
+    border-bottom: 10px solid rgb(23, 27, 44);
+}
+
+.btn-nav a.nav-link {
+    color: white !important;
+}
+
+#navcol-2 ul li {
+
+    padding: 0.25rem 0.5rem;
+    font-size: 0.875rem;
+    border-radius: 0.2rem;
+    color: white !important;
+
+    background: #f0ad4e;
+    /*background: #5cb85c;*/
+
+    display: inline-block;
+    font-weight: normal;
+    line-height: 1.25;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+
+    -webkit-transition: all 0.2s ease-in-out;
+    -o-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
+}
+
+#navcol-2 ul li:focus, #navcol-2 ul li:hover {
+    text-decoration: none;
+}
+
+#navcol-2 ul li:a {
+    color: white !important;
+}
+
+.nav-button-right {
+    position: absolute;
+    right: 0;
+}
